FIX: Problems with entity listing endpoint
