# service/src/test/resources/openapi.json
@@ -1839,10 +1839,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/EntityWithModules"
-                  }
+                  "$ref": "#/components/schemas/EntityWithModules"
                 }
               }
             }
@@ -2404,12 +2401,18 @@
         "type": "object",
         "properties": {
           "federationEntity": {
-            "$ref": "#/components/schemas/FederationEntityWithModules",
-            "description": "Federation entity (if entity type is federation)"
+            "type": "array",
+            "description": "Federation entity (if entity type is federation)",
+            "items": {
+              "$ref": "#/components/schemas/FederationEntityWithModules"
+            }
           },
           "hostedEntity": {
-            "$ref": "#/components/schemas/HostedEntity",
-            "description": "Hosted entity (if entity type is hosted)"
+            "type": "array",
+            "description": "Hosted entity (if entity type is hosted)",
+            "items": {
+              "$ref": "#/components/schemas/HostedEntity"
+            }
           }
         }
       },
